# ft_select

./: .fillit.c.swp  .fillit.h.swp  .ft_build_matrix.c.swp  .ft_input.c.swp  .nfs.200510b0.35cf  .read_from_file.c.swp  Makefile  X  a.out  author  compare  f_run.sh  field1.txt  field2.txt  field3.txt  fillit  fillit.c  fillit.h  fillit_colors.h  frun  ft_build_matrix.c  ft_check_free_space.c  ft_check_neighbour_back.c  ft_check_neighbour_front.c  ft_correct_position.c  ft_input.c  ft_output.c  ft_puterror.c  ft_solve.c  ft_t_check.c  generate_field.py  libft.h  map.txt  map2.txt  map_9.txt  map_false.txt  read_from_file.c  run.sh
ft_select/: CMakeLists.txt  Makefile  args_func.c  do_func.c  ft_select.h  helpful.c  libft.h  list_work.c  main.c  moves.c  show_func.c  signals.c  tem_func.c
ft_select/includes/: ._ft_select.h  ft_select.h
ft_select/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isascii.c  ft_itoa.c  ft_memcpy.c  ft_memset.c  ft_printf.c  ft_putendl.c  ft_putnbr_fd.c  ft_rrange.c  ft_strclr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striteri.c  ft_strlcat.c  ft_strncmp.c  ft_strncpy.c  ft_strstr.c  ft_strsub.c  ft_tolower.c  ft_toupper.c
ft_select/src/: ._list_work.c  ._main.c  ._signals.c  ._tem_func.c  args_func.c  do_func.c  ft_printf_fd.c  helpful.c  list_work.c  main.c  moves.c  show_func.c  signals.c  tem_func.c
includes/: fillit.h  fillit_colors.h  ft_select.h  libft.h
libft/: ft_atoi_base.c  ft_inter.c  ft_isalnum.c  (+38 more)
untitled folder/: 1.txt  CMakeLists.txt  args_func.c  ft_select.h  helpful.c  main.c  signals.c  tem_func.c
(+31 files in other folders)
